[package]
name = "test_study"
version = "0.1.0"
edition = "2021"
authors = ["Auodesy"]
description = "A comprehensive template for lib crates!"
readme = 'README.md'
license = "MIT"
homepage = "https://github.com/Auo578/rust/tree/main/%E5%85%A5%E9%97%A8/class_practice/test_study"
repository = "https://github.com/Auo578/rust/tree/main/%E5%85%A5%E9%97%A8/class_practice/test_study.git"


[dependencies]
